Change List
=========
Version 2016081402
Added new html5 snapshot maker

Version 2016081401
Tweaks to support auto iframe resizing

Version 2015121102
Added jquery so that the drawingboard.js doesn't fail

Version 2015121101
Support for refactored PoodLL filter and support for Moodle 3.0
