@@ -46,7 +46,7 @@ if ($ADMIN->fulltree) {
 	
 	//PoodLL Whiteboard
 	$settings->add(new admin_setting_heading('atto_poodll/whiteboards', get_string('whiteboardheading', 'atto_poodll'), ''));
-	$wboptions = array('drawingboard' => 'Drawing Board(js)', 'literallycanvas' => 'Literally Canvas(js)','poodll' => 'PoodLL Whiteboard(Flash)');
+	$wboptions = array('drawingboard' => 'Drawing Board(js)', 'literallycanvas' => 'Literally Canvas(js)');
 	$settings->add(new admin_setting_configselect('atto_poodll/usewhiteboard', get_string('usewhiteboard', 'atto_poodll'), '', 'drawingboard', $wboptions));
 
 	
