@@ -4,3 +4,8 @@
 .atto_poodll_field{
 	width: 200px;
 }
+
+div.atto_widget_buttons {
+    display: inline-block;
+    margin: 5px;
+}
