@@ -70,19 +70,19 @@ var BUTTONSHEADERTEMPLATE = '' +
         '</div>';
         
 var BUTTONTEMPLATE = '' +
-        '<div id="{{elementid}}_{{innerform}}" class="atto_generico_buttons mdl-align">' +
+        '<div id="{{elementid}}_{{innerform}}" class="atto_widget_buttons mdl-align">' +
             '<button class="' + CSS.NAMEBUTTON + '_{{templateindex}}">{{name}}</button>' +
         '</div>';
 		
 var FIELDTEMPLATE = '' +
         '<div id="{{elementid}}_{{innerform}}" class="mdl-align">{{variable}}' +
-            '&nbsp;<input type="text" class="' + CSS.TEMPLATEVARIABLE + '_{{variableindex}} atto_generico_field" value="{{defaultvalue}}"></input>' +
+            '&nbsp;<input type="text" class="' + CSS.TEMPLATEVARIABLE + '_{{variableindex}} atto_widget_field" value="{{defaultvalue}}"></input>' +
         '</div>';
 var SELECTCONTAINERTEMPLATE = '' +
             '<div id="{{elementid}}_{{innerform}}" class="mdl-align">{{variable}}</div>';
 			
 var SELECTTEMPLATE = '' +
-            '<select class="' + CSS.TEMPLATEVARIABLE + '_{{variableindex}} atto_generico_field"></select>';
+            '<select class="' + CSS.TEMPLATEVARIABLE + '_{{variableindex}} atto_widget_field"></select>';
 
 var OPTIONTEMPLATE ='' +
 		'<option value="{{option}}">{{option}}</option>';
